--- a/style/styles.css
+++ b/style/styles.css
@@ -1,4 +1,7 @@
-
+.topnav>.socialmedia1 a{
+  padding: 8px;
+  float: right;
+}
 .logo img{
   height: 44px;
   margin-left: 9px;
@@ -51,6 +54,10 @@
     .nametag {
       margin: 8px 8px 15px 8px;
     }
+    .socialmedia1{
+      display: inline-block;
+      float: right;
+    }
     .topnav{
       margin:8px;
     }
@@ -82,17 +89,28 @@
     display: none;
   }
   
+  .socialmedia2{
+    display: none;
+  }
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
       display: block;
     }
+    .socialmedia1 a:first-child{
+      display:none;
+    }
+    .socialmedia1 a{
+      display: inline-block;
+    }
+    .socialmedia2{
+      display: inline-block;
+    }
     .logo {
       float: none;
     }
   }
-  
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
   @media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
